--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          alt="">
     <div class="ms-2">
       <h5 class="fs-6 mb-0">
-        <a class="text-decoration-none" href="#">Jone Doe</a>
+        <a class="text-decoration-none" href="#">Viteli Widner</a>
       </h5>
       <p class="mt-1 mb-0">Lorem ipsum dolor sit amet consectetur.</p>
     </div>
@@ -167,7 +167,7 @@
     <div class="welcome">
       <div class="content rounded-3 p-3">
         <h1 class="fs-3">Welcome to Dashboard</h1>
-        <p class="mb-0">Hello Jone Doe, welcome to your awesome dashboard!</p>
+        <p class="mb-0">Hello Viteli Widner, welcome to your admin dashboard!</p>
       </div>
     </div>
 
